--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+  <a href="We the Kings.html"> Assignment 1, Chapter 2</a>  
+  
 <h1>Melissa Halik</h1>
 <p>I am a senior OMIS major.</p>
 <p>I am minoring in Data Analytics</p>
