--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <title>About Melissa Halik</title>
 </head>
 <body>
-
-  <a href="We the Kings.html"> Assignment 1, Chapter 2</a>  
   
 <h1>Melissa Halik</h1>
+  
+  <a href="blockquote2.html"> Assignment 1, Chapter 2, Blockquote </a> &nbsp;
+  <a href="We the Kings.html"> Assignment 1, Chapter 2 Band</a>
 <p>I am a senior OMIS major.</p>
 <p>I am minoring in Data Analytics</p>
 
