--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <h1>Melissa Halik</h1>
   
   <a href="blockquote2.html"> Assignment 1, Chapter 2, Blockquote </a> &nbsp;
-  <a href="We the Kings.html"> Assignment 1, Chapter 2 Band</a>
+  <a href="We the Kings.html"> Assignment 1, Chapter 2 Band</a> &nbsp;
+  <a href="bg2_MelissaHalik.html"> Chapter 4 - Q5</a> &nbsp;
+  <a href="Halik.html"> Chapter 4 - Q8</a>
+  
 <p>I am a senior OMIS major.</p>
 <p>I am minoring in Data Analytics</p>
 
