--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <a href="blockquote2.html"> Assignment 1, Chapter 2, Blockquote </a> &nbsp;
   <a href="We the Kings.html"> Assignment 1, Chapter 2 Band</a> &nbsp;
   <a href="bg2_MelissaHalik.html"> Chapter 4 - Q5</a> &nbsp;
-  <a href="Halik.html"> Chapter 4 - Q8</a>
+  <a href="Halik.html"> Chapter 4 - Q8</a> &nbsp;
+  <a href="myhobby.html"> Chapter 4 - Q8</a>
   
 <p>I am a senior OMIS major.</p>
 <p>I am minoring in Data Analytics</p>
