--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <a href="We the Kings.html"> Assignment 1, Chapter 2 Band</a> &nbsp;
   <a href="bg2_MelissaHalik.html"> Chapter 4 - Q5</a> &nbsp;
   <a href="Halik.html"> Chapter 4 - Q8</a> &nbsp;
-  <a href="myhobby.html"> Soccer Chapter 6 Hobby</a>
+  <a href="myhobby.html"> Soccer Chapter 6 Hobby</a> &nbsp;
+  <a href="CH7 HWy.html"> Chapter 7 Assignment</a>
   
 <p>I am a senior OMIS major.</p>
 <p>I am minoring in Data Analytics</p>
