--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="bg2_MelissaHalik.html"> Chapter 4 - Q5</a> &nbsp;
   <a href="Halik.html"> Chapter 4 - Q8</a> &nbsp;
   <a href="myhobby.html"> Soccer Chapter 6 Hobby</a> &nbsp;
-  <a href="CH7 HWy.html"> Chapter 7 Assignment</a>
+  <a href="CH7 HW.html"> Chapter 7 Assignment</a>
   
 <p>I am a senior OMIS major.</p>
 <p>I am minoring in Data Analytics</p>
