--- a/Ch7 HW.html
+++ b/Ch7 HW.html
@@ -5,6 +5,10 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="wildflower.css" media="screen">
 <link rel="stylesheet" href="wildflowerprint.css" media="print"> 
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+</script>
+<![endif]-->
 </head>
 <body>
 <div id="container">
