--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <a href="Halik.html"> Chapter 4 - Q8</a> &nbsp;
   <a href="myhobby.html"> Soccer Chapter 6 Hobby</a> &nbsp;
   <a href="Ch7 HW.html"> Chapter 7</a> &nbsp;
-  <a href="webpresencemockup.html"> Web Presence Mockup</a> 
+  <a href="webpresencemockup.html"> Web Presence Mockup</a>
+  <a href="sport8.html"> Ch8 - Q6</a> &nbsp;
+  <a href="band8.html"> C8 - Q8</a> 
+  
  
 <p>I am a senior OMIS major.</p>
 <p>I am minoring in Data Analytics</p>
