--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <a href="Ch7 HW.html"> Chapter 7</a> &nbsp;
   <a href="webpresencemockup.html"> Web Presence Mockup</a>
   <a href="sport8.html"> Ch8 - Q6</a> &nbsp;
-  <a href="band8.html"> Ch8 - Q8</a> 
-  <a href=chapter9question3.html> Ch9 - Q3</a>
+  <a href="band8.html"> Ch8 - Q8</a>  &nbsp;
+  <a href=chapter9question3.html> Ch9 - Q3</a> &nbsp;
+  <a href=chapter9question5.html> Ch9 - Q5</a>
+  
   
  
 <p>I am a senior OMIS major.</p>
