--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <a href="webpresencemockup.html"> Web Presence Mockup</a>
   <a href="sport8.html"> Ch8 - Q6</a> &nbsp;
   <a href="band8.html"> Ch8 - Q8</a>  &nbsp;
-  <a href=chapter9question3.html> Ch9 - Q3</a> &nbsp;
-  
+  <a href="chapter9question3.html"> Ch9 - Q3</a> &nbsp;
+  <a href="chapter9question5.html"> Ch9 - Q5</a>
   
  
 <p>I am a senior OMIS major.</p>
