--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="bg2_MelissaHalik.html"> Chapter 4 - Q5</a> &nbsp;
   <a href="Halik.html"> Chapter 4 - Q8</a> &nbsp;
   <a href="myhobby.html"> Soccer Chapter 6 Hobby</a> &nbsp;
-  <a href="Ch7 HW.html"> Chapter 7</a> &nbsp;
+  <a href="chapter7.html"> Chapter 7</a> &nbsp;
   <a href="webpresencemockup.html"> Web Presence Mockup</a>
   <a href="sport8.html"> Ch8 - Q6</a> &nbsp;
   <a href="band8.html"> Ch8 - Q8</a>  &nbsp;
