--- a/Halik.html
+++ b/Halik.html
@@ -15,7 +15,7 @@ body {font-family: Arial, Verdana, sans-serif;
 <h3><u>Hobbies and Activities</u></h3>
 <dl>  
 <dt><strong>Puzzles</strong></dt>
-    <dd>I like doing jigsaw puzzels during my free time. </dd>
+    <dd>I like doing jigsaw puzzles during my free time. </dd>
 <dt><strong>Soccer</strong></dt>
    <dd>I like watching any Real Madrid games and playing soccer.</dd>
 <dt><strong>TV/Movies</strong></dt>
