--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Hobby</title>
+<title>About Me</title>
 <meta charset="utf-8">
 <style>
 header { background-color: lightblue;       
@@ -15,11 +15,11 @@ header { background-color: lightblue;
 nav { float: left;
       width: 150px; }
 main { margin: 0 0px 0 160px;
-        padding: 5px 50px 270px 50px;
-        background-image: url(field.jpg);
+        padding: 5px 50px 500px 50px;
+        background-image: url(water.jpg);
         background-repeat: no-repeat;
         background-size: 100% 100%;
-        color: white; }
+        color: black; }
 footer { font-size: .90em;
          text-align: center;
          color: pink;
@@ -91,30 +91,18 @@ a {text-decoration: none;
     <li><a href="project.html">Projects</a></li>
     <li><a href="refs.html">References</a></li>
     <li><a href="contact.html">Contact</a></li>
+
 </ul>
 </nav>
 <main role="complementary">
-<h2><center>My Hobbies</center></h2>
-<h3><u>Current Hobbies and Activities</u></h3>
+<h2><center>About Melissa</center></h2>
 <dl>
-<dt><strong>Puzzles</strong></dt>
-    <dd>During my free time, when I'm not working or in school, I like doing jigsaw puzzles.</dd>
-<dt><strong>Soccer</strong></dt>
-    <dd>One of my other hobbies is playing and watching soccer. During my free time, my cousins and I always end up playing soccer in their back yard. One of my favorite teams for soccer is Real Madrid. During World Cup, my family and I keep track of all the games and make sure that we record each match so that we can watch it later that day. One of the countries that my family roots for during World Cup is Poland, even though Poland hasn't gotten too far in the tournement in the last couple years.</dd>
-<dt><strong>TV/Movies</strong></dt>
-    <dd>During my free time, I like to catch up on TV shows that I have been watching, and I like to watch movies. Currently, my favorite shows to watch right now are Grey's Anatomy and Brooklyn Nine-Nine</strong></dd>
-</dl>
-
-<p>Are you interested in joining Norridge Park District's soccer team? Please fill out the form below!</p>
-<center><form method="post" action="http://webdevbasics.net/scripts/demo.php">
-<label for="name"> Name: </label>
-<input type="text" name="name" id="name" required="name">
-<label for="email">E-Mail: </label>
-<input type="text" name="email" id="email" required="email">
-<label for="comment"> Any Questions or Comments?</label>
-    <textarea rows="3" name="comment" id="comment" columns="50" required="comment"></textarea>
-        <input type="submit" value="Submit"></center>
-</form>
-
+<dt><strong>Introduction</strong></dt>
+    <dd>I am a senior Operations Management and Information Systems major here at Northern Illinois University. On top of my major, I also have a minor in Data Analytics. I chose OM&IS, because I have always loved using computers growing up, and this major allows me to continue using technology with a business aspect added into it. What I would like to do in my future career would be to be able to use SQL and my minor, Data Analytics, into my future job. I will be graduating this semester, which is May 2019. A fun fact about me, is that Polish is my first language. </dd>
+    <br>
+    <br>
+    <center><img src="mhalik.jpg" width="350" height="200" alt="picture" id="floatcenter"></center>
+    <br>
+    <center><h4>You can contact me at: <a href="https://outlook.office.com"> z1766948@students.niu.edu</a></h4></center>
 </body>
 </html>
