--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <a href="band8.html"> Ch8 - Q8</a>  &nbsp;
   <a href="chapter9question3.html"> Ch9 - Q3</a> &nbsp;
   <a href="chapter9question5.html"> Ch9 - Q5</a> &nbsp;
-  <a href="home.html"> Web Presence Project</a>
+  <a href="home.html"> Web Presence Project</a> &nbsp;
+  <a href="webpresenceproject.html"> Web Presence Balsamiq</a>
+ 
   
  
 <p>I am a senior OMIS major.</p>
