--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   
-<h1>Melissa Halik</h1>
+  <center><h1>Melissa Halik</h1></center>
   
-  <a href="blockquote2.html"> Assignment 1, Chapter 2, Blockquote </a> &nbsp;
+  <center><a href="blockquote2.html"> Assignment 1, Chapter 2, Blockquote </a> &nbsp;
   <a href="We the Kings.html"> Assignment 1, Chapter 2 Band</a> &nbsp;
   <a href="bg2_MelissaHalik.html"> Chapter 4 - Q5</a> &nbsp;
   <a href="Halik.html"> Chapter 4 - Q8</a> &nbsp;
@@ -19,12 +19,8 @@
   <a href="chapter9question3.html"> Ch9 - Q3</a> &nbsp;
   <a href="chapter9question5.html"> Ch9 - Q5</a> &nbsp;
   <a href="home.html"> Web Presence Project</a> &nbsp;
-  <a href="webpresenceproject.html"> Web Presence Balsamiq</a>
- 
-  
- 
-<p>I am a senior OMIS major.</p>
-<p>I am minoring in Data Analytics</p>
+    <a href="webpresenceproject.html"> Web Presence Balsamiq</a>
+  <a href="Chapter11Q2.html"> Chapter 11 - Question 2</a></center>
 
 </body>
 </html>
