--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <a href="chapter9question5.html"> Ch9 - Q5</a> &nbsp;
   <a href="home.html"> Web Presence Project</a> &nbsp;
     <a href="webpresenceproject.html"> Web Presence Balsamiq</a>
-  <a href="Chapter11Q2.html"> Chapter 11 - Question 2</a></center>
+  <a href="Chapter11Q2.html"> Chapter 11 - Question 2</a>
+  <a href="video11.html">Chapter 11 - Question 6</a></center>
 
 </body>
 </html>
