--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <a href="home.html"> Web Presence Project</a> &nbsp;
   <a href="webpresenceproject.html"> Web Presence Balsamiq</a> &nbsp;
   <a href="Chapter11Q2.html"> Chapter 11 - Question 2</a> &nbsp;
-  <a href="video11.html">Chapter 11 - Question 6</a></center> &nbsp;
-  <a href="ProjectProposal.html"> Project Proposal</a>
+  <a href="video11.html">Chapter 11 - Question 6</a> &nbsp;
+  <a href="ProjectProposal.html"> Project Proposal</a></center>
 
 </body>
 </html>
