--- a/ProjectProposal.html
+++ b/ProjectProposal.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center><h1>Project Proposal</h1></center>
-<center><h3>Matt Domagala</h3><center>
+<center><h3>Matt Domagala and Melissa Halik</h3><center>
 
 <a href="Website Project Proposal.pdf">Website Project Proposal</a> &nbsp;
 <a href="Zonka Mockup.pdf">Webpage Mockup PDF</a> &nbsp;
