--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <a href="webpresenceproject.html"> Web Presence Balsamiq</a> &nbsp;
   <a href="Chapter11Q2.html"> Chapter 11 - Question 2</a> &nbsp;
   <a href="video11.html">Chapter 11 - Question 6</a> &nbsp;
-  <a href="ProjectProposal.html"> Project Proposal</a></center>
+  <a href="ProjectProposal.html"> Project Proposal</a> &nbsp;
+  <a href="zonkaindex.html"> Zonka Custom Swimbait - Group Project</a> &nbsp;</center>
 
 </body>
 </html>
