--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <a href="Chapter11Q2.html"> Chapter 11 - Question 2</a> &nbsp;
   <a href="video11.html">Chapter 11 - Question 6</a> &nbsp;
   <a href="ProjectProposal.html"> Project Proposal</a> &nbsp;
-  <a href="zonkaindex.html"> Zonka Custom Swimbait - Group Project</a> &nbsp;</center>
+  <a href="zonkaindex.html"> Zonka Custom Swimbait - Group Project</a></center>;
 
 </body>
 </html>
